# end-to-end-RAG

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: config.py  constants.py  gemini.py  get_knowledge.py  llms.py  utils.py
src/pipeline/: ingestion_pipeline.py
src/rag_db/: chunking.py  embedding.py  vectorstore.py
